<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tallence.emadrockpaperscissors.MainActivity">

    <ImageView
        android:id="@+id/rockIV"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/rock"
        android:transitionName="rock_translation"
        android:contentDescription="@string/rockImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideLine15" />

    <ImageView
        android:id="@+id/paperIV"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/paper"
        android:contentDescription="@string/paperImage"
        android:transitionName="paper_translation"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine25"
        app:layout_constraintTop_toBottomOf="@+id/rockIV" />

    <ImageView
        android:id="@+id/scissorIV"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/scissor"
        android:contentDescription="@string/scissorImage"
        android:transitionName="scissor_translation"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine75"
        app:layout_constraintTop_toBottomOf="@+id/rockIV" />

    <Button
        android:id="@+id/startPlayingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:text="@string/start_playing"
        android:background="@drawable/custom_button"
        android:textAllCaps="false"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideLine85"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideLine85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuideLine75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


</androidx.constraintlayout.widget.ConstraintLayout>