<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/ThemeOverlay.EmadRockPaperScissors.FullscreenContainer"
    tools:context="com.tallence.emadrockpaperscissors.PlayGroundActivity">


    <ImageView
        android:id="@+id/backArrowIV"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/back_arrow"
        android:layout_margin="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/secondary" />

    <ImageView
        android:id="@+id/rockIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/rockImage"
        android:src="@drawable/rock"
        android:transitionName="rock_translation"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/paperIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/opponentRockIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/rockImage"
        android:src="@drawable/rock"
        android:scaleX="-1"
        android:visibility="invisible"
        android:transitionName="rock_translation"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/paperIV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/paperIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/paperImage"
        android:transitionName="paper_translation"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/opponentPaperIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/paperImage"
        android:transitionName="paper_translation"
        android:src="@drawable/paper"
        android:scaleX="-1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/scissorIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/scissorImage"
        android:transitionName="scissor_translation"
        android:src="@drawable/scissor"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paperIV" />

    <ImageView
        android:id="@+id/opponentScissorIV"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/scissorImage"
        android:transitionName="scissor_translation"
        android:src="@drawable/scissor"
        android:scaleX="-1"
        android:visibility="invisible"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paperIV" />

    <TextView
        android:id="@+id/meScoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/initial_score"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/gray_draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/meTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/me"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/gray_draw"
        app:layout_constraintBottom_toTopOf="@+id/meScoreTV"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/computerScoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/initial_score"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/gray_draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/computerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/computer"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/gray_draw"
        app:layout_constraintBottom_toTopOf="@+id/computerScoreTV"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>